# yourfirstdatajob

./: .gitignore  README.md  dotenv-0.0.5-py3-none-any.whl  pyproject.toml  requirements.txt
app/: app.py
app/pages/: analysis.py  analysis_data_stack.py  analysis_statistics.py  cloud.py  contact.py  data_stack.py  home.py  market_data.py  network.py  personal.py  salary_pred.py
notebooks/: 01_data.ipynb  paths.py
src/: get_data.py  insert_data.py  prueba.ipynb  transform_data.py
